--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -178,6 +178,12 @@
       <property name="maximum">
        <number>100</number>
       </property>
+      <property name="value">
+       <number>0</number>
+      </property>
+      <property name="sliderPosition">
+       <number>0</number>
+      </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
